<resources>
    <string name="app_name">Mobile-dev</string>
    <string name="Login_text">Login</string>
    <string name="Login_email_input">Please enter your email</string>
    <string name="Login_password_input">Please input your password</string>
    <string name="Login_btn_text">Login</string>
    <string name="Login_email_value" />
    <string name="Login_password_value" />
    <string name="manager_menu_item1">search</string>
    <string name="manager_menu_item2">settings</string>
    <string name="string_manager_menu_item2">settings</string>
    <string name="manager_menu_item3">navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_btn_text">Register</string>
    <string name="register_emailinput_hint">Please input your email address</string>
    <string name="reg_fullname_input">Name</string>
    <string name="goto_reg_text">Don\'t have an account, go to register</string>
    <string name="register_email_input" />
    <string name="register_pwd_input" />
</resources>